--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.5",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18"
